# sanar-sales-hub

./: .gitignore  README.md  app.py  config.py  pyproject.toml  services.py  styles.py  supabase_client.py
pages/: 1_💬_Conversas_em_Aberto.py  2_🧠_RAG_Base_de_Conhecimento.py
