[tool.poetry]
name = "poc-pirata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # Linha CRÃTICA para o deploy no Streamlit Cloud

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
streamlit = ">=1.49.1,<2.0.0"
pandas = ">=2.3.2,<3.0.0"
openai = ">=1.108.1,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pinecone = ">=7.3.0,<8.0.0"
supabase = ">=2.20.0,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"